--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -204,6 +204,7 @@ allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
+allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
 allow 178.17.170.144;
@@ -957,7 +958,6 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -1273,6 +1273,7 @@ allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1507,6 +1508,10 @@ allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
+allow 2a0e:bfc0:0:11::796d;
+allow 2a0e:bfc0:0:14::24a8;
+allow 2a0e:bfc0:0:2::8a62;
+allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
@@ -1792,6 +1797,10 @@ allow 45.9.168.103;
 allow 45.9.168.18;
 allow 45.9.168.192;
 allow 45.94.31.68;
+allow 45.95.169.104;
+allow 45.95.169.109;
+allow 45.95.169.110;
+allow 45.95.169.252;
 allow 46.165.243.36;
 allow 46.182.21.248;
 allow 46.23.109.25;
@@ -1939,13 +1948,13 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.234.157.254;
-allow 89.32.41.150;
 allow 89.36.231.128;
 allow 89.37.95.34;
 allow 89.58.26.216;
@@ -2028,5 +2037,4 @@ allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
 allow 96.9.125.211;
-allow 97.74.89.52;
 allow 98.128.173.33;
