--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -204,6 +204,7 @@ set_real_ip_from 176.65.149.100;
 set_real_ip_from 176.65.149.105;
 set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
+set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.17.170.144;
@@ -957,7 +958,6 @@ set_real_ip_from 2401:c080:1c02:2d4::;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2407:1c00:6100:5640::;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
@@ -1273,6 +1273,7 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1507,6 +1508,10 @@ set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
+set_real_ip_from 2a0e:bfc0:0:11::796d;
+set_real_ip_from 2a0e:bfc0:0:14::24a8;
+set_real_ip_from 2a0e:bfc0:0:2::8a62;
+set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc2:0:24::3456;
 set_real_ip_from 2a0e:bfc2:0:2c::1;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
@@ -1792,6 +1797,10 @@ set_real_ip_from 45.9.168.103;
 set_real_ip_from 45.9.168.18;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
+set_real_ip_from 45.95.169.104;
+set_real_ip_from 45.95.169.109;
+set_real_ip_from 45.95.169.110;
+set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
@@ -1939,13 +1948,13 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
+set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.234.157.254;
-set_real_ip_from 89.32.41.150;
 set_real_ip_from 89.36.231.128;
 set_real_ip_from 89.37.95.34;
 set_real_ip_from 89.58.26.216;
@@ -2028,5 +2037,4 @@ set_real_ip_from 95.211.174.137;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.216.107.148;
 set_real_ip_from 96.9.125.211;
-set_real_ip_from 97.74.89.52;
 set_real_ip_from 98.128.173.33;
