--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -67,6 +67,7 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
+set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -638,7 +639,6 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
-set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -1000,7 +1000,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
-set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1022,6 +1021,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1258,6 +1258,7 @@ set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1659,6 +1660,7 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:140;
 set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
+set_real_ip_from 2a12:de40:21:1be4::;
 set_real_ip_from 2a14:3f87:6920::126;
 set_real_ip_from 2a14:3f87:6920::5b;
 set_real_ip_from 2a14:3f87:f001:30::a;
@@ -1690,6 +1692,7 @@ set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 38.97.116.245;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
@@ -1823,6 +1826,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1903,6 +1907,7 @@ set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.29.153.76;
+set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
@@ -1945,6 +1950,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 88.151.194.24;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
