--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -67,6 +67,7 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
+set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -195,6 +196,7 @@ set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.148.133;
@@ -638,6 +640,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.61.60;
@@ -999,6 +1002,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1020,6 +1024,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1543,54 +1548,6 @@ set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
-set_real_ip_from 2a10:1fc0:10::19eb:717b;
-set_real_ip_from 2a10:1fc0:10::28fc:90d4;
-set_real_ip_from 2a10:1fc0:10::2a17:5b54;
-set_real_ip_from 2a10:1fc0:10::2cf4:6ba2;
-set_real_ip_from 2a10:1fc0:10::2d91:1a2d;
-set_real_ip_from 2a10:1fc0:10::3903:457;
-set_real_ip_from 2a10:1fc0:10::3919:de17;
-set_real_ip_from 2a10:1fc0:10::3a1:5e9f;
-set_real_ip_from 2a10:1fc0:10::3dc5:e694;
-set_real_ip_from 2a10:1fc0:10::3eb3:d1d0;
-set_real_ip_from 2a10:1fc0:10::3ec1:2b1e;
-set_real_ip_from 2a10:1fc0:10::40d8:83c;
-set_real_ip_from 2a10:1fc0:10::42d2:f78b;
-set_real_ip_from 2a10:1fc0:10::5138:4dfa;
-set_real_ip_from 2a10:1fc0:10::5719:261d;
-set_real_ip_from 2a10:1fc0:10::61d9:7617;
-set_real_ip_from 2a10:1fc0:10::61e2:c84d;
-set_real_ip_from 2a10:1fc0:10::627f:3c31;
-set_real_ip_from 2a10:1fc0:10::694a:c359;
-set_real_ip_from 2a10:1fc0:10::6b4c:30fc;
-set_real_ip_from 2a10:1fc0:10::6c2e:469a;
-set_real_ip_from 2a10:1fc0:10::6d92:d6ab;
-set_real_ip_from 2a10:1fc0:10::6fde:4b8d;
-set_real_ip_from 2a10:1fc0:10::792f:38b4;
-set_real_ip_from 2a10:1fc0:10::895d:abf9;
-set_real_ip_from 2a10:1fc0:10::8a03:d023;
-set_real_ip_from 2a10:1fc0:10::8b78:d42e;
-set_real_ip_from 2a10:1fc0:10::8d4d:eca2;
-set_real_ip_from 2a10:1fc0:10::9a73:d4f2;
-set_real_ip_from 2a10:1fc0:10::9d80:c9f7;
-set_real_ip_from 2a10:1fc0:10::9e08:e765;
-set_real_ip_from 2a10:1fc0:10::a3a5:49da;
-set_real_ip_from 2a10:1fc0:10::a458:8b37;
-set_real_ip_from 2a10:1fc0:10::a63c:724c;
-set_real_ip_from 2a10:1fc0:10::b571:1205;
-set_real_ip_from 2a10:1fc0:10::bf3f:d195;
-set_real_ip_from 2a10:1fc0:10::c129:61a1;
-set_real_ip_from 2a10:1fc0:10::c385:c7fa;
-set_real_ip_from 2a10:1fc0:10::c7c7:2f84;
-set_real_ip_from 2a10:1fc0:10::d5a6:a292;
-set_real_ip_from 2a10:1fc0:10::d5d0:db30;
-set_real_ip_from 2a10:1fc0:10::d6b7:b3e9;
-set_real_ip_from 2a10:1fc0:10::dbe0:6173;
-set_real_ip_from 2a10:1fc0:10::dbe9:7852;
-set_real_ip_from 2a10:1fc0:10::e4c8:9020;
-set_real_ip_from 2a10:1fc0:10::ea87:5496;
-set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
-set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:1467::;
@@ -1809,7 +1766,6 @@ set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
-set_real_ip_from 46.249.49.183;
 set_real_ip_from 46.250.243.29;
 set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
@@ -1901,7 +1857,6 @@ set_real_ip_from 80.94.92.92;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
-set_real_ip_from 8.211.1.212;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
@@ -1916,30 +1871,6 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
-set_real_ip_from 85.239.55.11;
-set_real_ip_from 85.239.55.110;
-set_real_ip_from 85.239.55.112;
-set_real_ip_from 85.239.55.114;
-set_real_ip_from 85.239.55.123;
-set_real_ip_from 85.239.55.132;
-set_real_ip_from 85.239.55.168;
-set_real_ip_from 85.239.55.173;
-set_real_ip_from 85.239.55.174;
-set_real_ip_from 85.239.55.184;
-set_real_ip_from 85.239.55.189;
-set_real_ip_from 85.239.55.192;
-set_real_ip_from 85.239.55.201;
-set_real_ip_from 85.239.55.228;
-set_real_ip_from 85.239.55.230;
-set_real_ip_from 85.239.55.239;
-set_real_ip_from 85.239.55.24;
-set_real_ip_from 85.239.55.249;
-set_real_ip_from 85.239.55.25;
-set_real_ip_from 85.239.55.250;
-set_real_ip_from 85.239.55.31;
-set_real_ip_from 85.239.55.37;
-set_real_ip_from 85.239.55.51;
-set_real_ip_from 85.239.55.80;
 set_real_ip_from 85.90.196.47;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.54.28.49;
@@ -1983,30 +1914,6 @@ set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
-set_real_ip_from 91.227.77.107;
-set_real_ip_from 91.227.77.108;
-set_real_ip_from 91.227.77.119;
-set_real_ip_from 91.227.77.125;
-set_real_ip_from 91.227.77.139;
-set_real_ip_from 91.227.77.158;
-set_real_ip_from 91.227.77.160;
-set_real_ip_from 91.227.77.181;
-set_real_ip_from 91.227.77.193;
-set_real_ip_from 91.227.77.200;
-set_real_ip_from 91.227.77.208;
-set_real_ip_from 91.227.77.209;
-set_real_ip_from 91.227.77.226;
-set_real_ip_from 91.227.77.229;
-set_real_ip_from 91.227.77.237;
-set_real_ip_from 91.227.77.25;
-set_real_ip_from 91.227.77.31;
-set_real_ip_from 91.227.77.36;
-set_real_ip_from 91.227.77.44;
-set_real_ip_from 91.227.77.48;
-set_real_ip_from 91.227.77.51;
-set_real_ip_from 91.227.77.54;
-set_real_ip_from 91.227.77.62;
-set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
